--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -299,7 +299,7 @@
 
 						// popup html
 						var contentString = '<div>contractor: <strong>' + entry.contractor +
-						'</strong><br>project name: ' + (typeof entry.projectname !== 'undefined') ? entry.projectname : '<span class="na">not available</span>' +
+						'</strong><br>project name: ' + entry.projectname +
 						'<br>project start date: ' + entry.projectstartdate +
 						'<br>job start date: ' + entry.jobstartdate +
 						'<br>address: ' + entry.address +
