my last futzing of the day

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -302,13 +302,13 @@
 						'</strong><br>address: ' + entry.address;
 						
 						if (entry.projectname) {
-						    contentString += 'project name: ' + entry.projectname + '<br>';
+						    contentString += '<br>project name: ' + entry.projectname;
 						}
 						if (entry.projectstartdate) {
-						    contentString += 'project start date: ' + entry.projectstartdate + '<br>';
+						    contentString += '<br>project start date: ' + entry.projectstartdate;
 						}
 						if (entry.jobstartdate) {
-						    contentString += 'job start date: ' + entry.jobstartdate + '<br>';
+						    contentString += '<br>job start date: ' + entry.jobstartdate;
 						}
 						
 						contentString += '<br><ul>';
