I guess I added a line break somewhere

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -299,7 +299,7 @@
 
 						// popup html
 						var contentString = '<div>contractor: <strong>' + entry.contractor +
-						'</strong><br>address: ' + entry.address;
+						'</strong><br>address: ' + entry.address + '<br>';
 						
 						if (entry.projectname) {
 						    contentString += '<br>project name: ' + entry.projectname;
