--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -2,10 +2,10 @@
 <head>
 	<style>
 		
-		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&family=Noto+Serif+JP&family=Noto+Serif:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
    
 		        body {
-		            font-family: "Noto Serif JP";
+		            font-family: "Noto Serif";
 		            color: #595941;
 		            background-color: #e3e3e3;
 					font-size:14px;
