just when u think u out

--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -31,11 +31,11 @@
 		    height: 100vh;
 		}
 
-		.songlistdiv {
+		#songlistdiv {
 		    flex: 1;
 		}
 
-		.lyricsdiv {
+		#lyricsdiv {
 		    flex: 2;
 		}
 		
