--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -133,6 +133,8 @@
 			            lyricsdiv.innerHTML = wrappedText;
 						
 						const infoItems = document.querySelectorAll("info");
+						console.log("running");
+						console.log(infoItems);
 		
 						infoItems.forEach((item) => {
 							console.log(item);
