--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -114,10 +114,12 @@
 			</div>
 		<ol id="lyricslist"></ol>
 		</div>
-	
-		<div id="lyricsdiv">
-			<div id="embed-iframe"></div>
 		
+		<div>
+			<div id="embed-iframe"></div>
+			<div id="lyricsdiv">
+		
+			</div>
 		</div>
 	</div>
 	
