--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -117,8 +117,11 @@
 			<div style="padding:10px;">
 				<div id="embed-iframe"></div>
 			</div>
-			<div id="lyricsdiv">
+			<div>
 				<button id="closeButton">×</button>
+				<div id="lyricsdiv">
+				
+				</div>
 			</div>
 		</div>
 	</div>
