--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -68,6 +68,7 @@
 		#lyricsdiv {
 			padding:40px;
 			overflow: auto;
+			text-size:20px;
 		}
 		
 		.info{
@@ -79,7 +80,7 @@
 		
 		#closeButton {
 		  position: fixed;
-		  top: 200px;
+		  top: 180px;
 		  right: 20px;
 		  width: 40px;
 		  height: 40px;
@@ -148,7 +149,7 @@
 				const element = document.getElementById('embed-iframe');
 				const options = {
 					height: '160',
-					uri: 'spotify:track:0cslUTJ5eB4hUNs0fKyh59'
+					uri: ''
 				};
 			
 			    songlist.forEach(song => {
