--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -67,8 +67,10 @@
 
 		#lyricsdiv {
 			padding:40px;
+			padding-top:0px;
 			overflow: auto;
 			text-size:20px;
+			height: calc(100vh - 180px);
 		}
 		
 		.info{
