--- a/españolmix/index.html
+++ b/españolmix/index.html
@@ -69,7 +69,7 @@
 			padding:40px;
 			padding-top:0px;
 			overflow: auto;
-			text-size:20px;
+			font-size:20px;
 			height: calc(100vh - 180px);
 		}
 		
@@ -207,7 +207,7 @@
 			            .then(response => response.text())
 						.then(text => {
 							const lines = text.split('\n');
-				            const remainingLines = lines.slice(3).join('\n');
+				            const remainingLines = lines.slice(4).join('\n');
 				            lyricsdiv.innerHTML = wrapParagraphs(remainingLines)
 						
 							const infoItems = document.querySelectorAll(".info");
