--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -57,7 +57,7 @@
 		
 		const stretchList = document.getElementById('stretchList');
 
-		const groupCheckboxes = {};
+		const groupAccordions = {};
 
 		data.forEach(item => {
 			
